    reason for the conditional exclude in #89406 is no longer
    relevant (Closes: #836892)
  * Fix test failure in Hurd due to hard-coded ENOENT.
    Thanks to Pino Toscano for the fix
  * Fix symbols file for Hurd. Thanks to Pino Toscano

  [ Niko Tyni ]
  * Refresh cross build support files.

  [ Dominic Hargreaves ]
  * Activate perl-major-upgrade trigger

 -- Dominic Hargreaves <dom@earth.li>  Wed, 07 Sep 2016 14:57:12 +0100

perl (5.24.1~rc3-1) experimental; urgency=medium

  [ Dominic Hargreaves ]
  * Add Breaks for older verions of texinfo which didn't work
    with perl 5.24 (Closes: #825223)
  * Skip some POSIX uid and pid tests on GNU/Hurd. Thanks to
    Samuel Thibault for the report (Closes: #825016)
  * Fix GNU/Hurd hints (Closes: #825020)
  * Switch Vcs-Browser from gitweb to cgit and Vcs-Git to https

  [ Niko Tyni ]
  * [SECURITY] CVE-2016-6185: Make XSLoader skip relative paths not
    on @INC. (Closes: #829578)
  * Add patch from Chris Lamb making the output of ExtUtils::ParseXS
    reproducible. (Closes: #829296)
  * Import new upstream release candidate.
    + provide perlapi-5.24.0-exp1 for compatibility with test packages
  * Merge 5.22.2-5 from unstable.

 -- Niko Tyni <ntyni@debian.org>  Sat, 03 Sep 2016 14:18:56 +0300

perl (5.24.0-1) experimental; urgency=medium

  [ Niko Tyni ]
  * New upstream release.
  * Make libperl-dev depend on perl:any of the same version.
    This makes sure that versions of headers and libraries match
    while keeping cross building possible. (Closes: #823861)
  * Wrap long lines in perlbug messages. (Closes: #822463)

  [ Dominic Hargreaves ]
  * Add deprecation warning to bundled version of rename program
    (see #735134)

 -- Niko Tyni <ntyni@debian.org>  Tue, 17 May 2016 22:32:32 +0300

perl (5.24.0~rc5-1) experimental; urgency=medium

  * New upstream release candidate.

 -- Niko Tyni <ntyni@debian.org>  Sat, 07 May 2016 19:32:25 +0300

perl (5.24.0~rc4-1) experimental; urgency=medium
