@@ -21,4 +21,4 @@
 5.20.2
 5.22.1
 5.22.2
-5.24.0
+5.24.1
