@@ -52,9 +52,7 @@ pcd         = $(tmp)/usr/lib/$(archtriplet)/perl/debian-config-data-$(fullversio
 
 # If nonempty, this will determine $Config{debian_abi} and Provides: entries
 # (otherwise, the Provides: entries will be generated by debian/mkprovides)
-perlabi = $(fullversion)-exp1
-# if perlabi is set, perlabi_old will also be included in Provides
-perlabi_old = perlapi-5.24.0-exp1,
+perlabi =
 
 checkdir    = test -d debian
 checkroot   = test `id -u` -eq 0
@@ -92,7 +90,7 @@ subst_next_upstream = -VNext-Upstream-Version=$(nextversion)
 ifeq (,$(perlabi))
 subst_perlapi  = -Vperlapi:Provides="`$(PERL_TO_USE) debian/mkprovides`"
 else
-subst_perlapi  = -Vperlapi:Provides="$(perlabi_old) perlapi-$(perlabi)"
+subst_perlapi  = -Vperlapi:Provides="perlapi-$(perlabi)"
 endif
 
 # for cpan/Compress-Raw-Zlib
