@@ -13,6 +13,7 @@ perl (5.24.1~rc3-2) UNRELEASED; urgency=medium
 
   [ Dominic Hargreaves ]
   * Activate perl-major-upgrade trigger
+  * Update perlapi-* provides to be suitable for unstable
 
  -- Dominic Hargreaves <dom@earth.li>  Wed, 07 Sep 2016 14:57:12 +0100
 
